# Rust-COP290

./: Cargo.toml  Makefile  main.tex
.github/workflows/: rust.yml
src/: commands.rs  function.rs  lib.rs  main.rs  myparser.rs  spreadsheet.rs  ui.rs
src/common/: cell_data.rs  cell_value.rs  expression.rs  mod.rs  structs.rs
src/embedded_backend/: calc_engine.rs  mod.rs  simple.rs  single_threaded.rs  storage.rs  structs.rs  table.rs
src/embedded_backend/calc_engine/: functions.rs
src/front_end/: Cargo.toml  trunk.toml
src/front_end/src/: copy1.rs  intialworking.rs  main.rs  tempCodeRunnerFile.rs
src/front_end/static/: index.html  style.css  style.scss
src/parser/: formula.pest  formula_parser.rs  mod.rs
