[package]
name = "embedded"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0.219" , features = ["derive"] }
bincode = "1.3"
csv = "1.3"
egui = "0.31.1"
rfd = "0.15.3"
eframe = "0.31.1"
egui_extras = "0.31.1"
tempfile = "3.19.1"
once_cell = "1.21.3"

[build-dependencies]
pest_generator = "2.7"

