[package]
name = "spreadsheet"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7.8", features = ["csr"] }  # Added CSR feature
leptos_macro = "0.7.8"
leptos_reactive = "0.6.15"
leptos_dom = "0.7.8"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1.0.0"
web-sys = { version = "0.3", features = ["KeyboardEvent"] }
[dependencies.js-sys]
version = "0.3.77"

[package.metadata.trunk]
filehash = false 

